kubernetes/azure-ingress-hybrid-todo.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-resource-group: todo-demo
  name: azure-load-balancer
spec:
  loadBalancerIP: 51.11.225.182
  type: LoadBalancer
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: hybrid-todod
