kubernetes/hybrid-todo-serivce-np.yaml
apiVersion: v1
kind: Service
metadata:
  name: hybrid-todo-service-np
  namespace: hybrid-todo
spec:
  type: NodePort
  selector:
    app: hybrid-todo
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
