kubernetes/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hybrid-todo-db
  namespace: hybrid-todo
spec:
  selector:
    app: hybrid-todo-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
