kubernetes/azure-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hybrid-todo-ingress
  namespace: ingress-basic
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/enable-rewrite-log: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: hybrid-todo-service
          servicePort: 8080
        path: /
