kubernetes/route-hybrid-todo.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: todo
  namespace: todo-app
spec:
  to:
    kind: Service
    name: hybrid-todo-service
    weight: 100
  port:
    targetPort: 3000
  wildcardPolicy: None
